Crash when sculpting a GP object with animation #56263

Closed
opened 2018-08-07 13:39:29 +02:00 by ChristopherAnderssarian · 8 comments

System Information
Windows 7 Ultimate, 64-bit, 32GB, 5960x, Nvidia Quadro FX 1800 (Primary) & GeForce 9800 GTX+ (Secondary)

Blender Version
Broken: (2.8a faf43ff9ad)
Worked: (n/a)

Short description of error

Crash when sculpting a GP object with animation running

Exact steps for others to reproduce the error

Crash on sculpt with animation.blend

Open .blend

select sculpt mode, grab

Play animation

begin sculpting

Takes a couple of scalp edits to the object for the crash to happen. 
**System Information** Windows 7 Ultimate, 64-bit, 32GB, 5960x, Nvidia Quadro FX 1800 (Primary) & GeForce 9800 GTX+ (Secondary) **Blender Version** Broken: (2.8a faf43ff9ad8) Worked: (n/a) **Short description of error** Crash when sculpting a GP object with animation running **Exact steps for others to reproduce the error** [Crash on sculpt with animation.blend](https://archive.blender.org/developer/F4145711/Crash_on_sculpt_with_animation.blend) # Open .blend # select sculpt mode, grab # Play animation # begin sculpting ``` Takes a couple of scalp edits to the object for the crash to happen.

Added subscriber: @ChristopherAnderssarian

Added subscriber: @ChristopherAnderssarian
Antonio Vazquez self-assigned this 2018-08-07 13:40:42 +02:00

Not sure if this is something we need limit. What is the point to sculpt or edit while you play animation?

I will investigate.

Not sure if this is something we need limit. What is the point to sculpt or edit while you play animation? I will investigate.

Added subscriber: @mendio

Added subscriber: @mendio

It's not necessary right now allow to sculpt or edit strokes while play animation

It's not necessary right now allow to sculpt or edit strokes while play animation

Ok, as this is more a feature request because today this is not supported by design. I'm going to fix the crash setting a limitation to sculpt while play animation.

In the future, we can reenable this option but it will require a sculpt operator redesign.

Ok, as this is more a feature request because today this is not supported by design. I'm going to fix the crash setting a limitation to sculpt while play animation. In the future, we can reenable this option but it will require a sculpt operator redesign.

This issue was referenced by 4c712fd17e

This issue was referenced by 4c712fd17eade91d1eac65edae09f39460ae60ea

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

@antoniov

Totally agree, I'm trying to find ways to cause a crash that could happen by accident, in non-typical use cases.

@antoniov Totally agree, I'm trying to find ways to cause a crash that could happen by accident, in non-typical use cases.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56263
No description provided.